# agora-drep

./: .gitignore  404.html  CHANGELOG.md  README.md  agora-drep.cabal  cabal.project  flake.nix  haddock.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json  specification.html  toc.html  toc.js
.zed/: tasks.json
agora-drep-bench/: Bench.hs  baseline.csv
agora-drep-script-export/: Main.hs
agora-drep-spec/Spec/: Proxy.hs  Utils.hs
agora-drep-spec/Spec/Effect/: Voting.hs
agora-drep-spec/Spec/Effect/Voting/: Context.hs
agora-drep-spec/Spec/Effects/: Voting.hs
agora-drep-spec/Spec/Effects/Voting/: Context.hs
agora-drep-spec/Spec/Proxy/: Context.hs
agora-drep-test/: Main.hs  Test.hs
agora-drep-test/Agora/Drep/Test/: Proxy.hs
agora-drep-test/Spec/: Proxy.hs
agora-drep-test/Spec/Effects/: Voting.hs
agora-drep-test/Spec/Effects/Voting/: Context.hs
agora-drep-test/Spec/Proxy/: Context.hs
agora-drep/Agora/: AuthorityToken.hs  Proxy.hs  Utils.hs
agora-drep/Agora/Effect/: Voting.hs
agora-drep/Agora/Effects/: Voting.hs
haddock/: Agora-AuthorityToken.html  Agora-Effect-Voting.html  Agora-Effects-Voting.html  Agora-Proxy.html  Agora-Utils.html  agora-drep.haddock  agora-drep.txt  doc-index.html  doc-index.json  index.html
haddock/src/: Agora.AuthorityToken.html  Agora.Effect.Voting.html  Agora.Effects.Voting.html  Agora.Proxy.html  Agora.Utils.html
nix/agora-drep/: default.nix
nix/latex/: default.nix  lib.nix
nix/mdbook/: default.nix  lib.nix
specification/: .gitignore  default.nix  specification.tex
website/: SUMMARY.md  book.toml  default.nix  haddock.md  introduction.md  specification.md
