cabal-version:   3.0
name:            agora-drep
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
author:          Szabo Gergely
maintainer:      gergely@mlabs.city
build-type:      Simple
extra-doc-files: CHANGELOG.md

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -Wunused-do-bind

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  default-language:   Haskell2010
  build-depends:      base >=4.14 && <5

library
  import:           lang
  exposed-modules:
    Agora.AuthorityToken
    Agora.Proxy
    Agora.Utils

  build-depends:
    , base
    , generics-sop
    , plutarch
    , plutarch-ledger-api
    , plutus-ledger-api
    , plutus-tx

  hs-source-dirs:   agora-drep
  default-language: Haskell2010

executable agora-drep
  import:           lang
  main-is:          Main.hs
  build-depends:
    , agora-drep
    , base        ^>=4.18.2.1

  hs-source-dirs:   agora-drep-script-export
  default-language: Haskell2010

test-suite agora-drep-test
  import:           lang
  default-language: Haskell2010
  other-modules:    Agora.Drep.Test.Proxy
  type:             exitcode-stdio-1.0
  hs-source-dirs:   agora-drep-test
  main-is:          Test.hs
  build-depends:
    , agora-drep
    , base
    , plutarch
    , plutarch-ledger-api
    , plutus-context-builder
    , plutus-core
    , plutus-ledger-api
    , plutus-unit
    , tasty
    , tasty-hunit
