cabal-version:   3.0
name:            agora-drep
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
author:          Szabo Gergely
maintainer:      gergely@mlabs.city
build-type:      Simple
extra-doc-files: CHANGELOG.md
data-files:      agora-drep-bench/*.csv

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -Wunused-do-bind

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  default-language:   Haskell2010
  build-depends:      base

library
  import:          lang
  hs-source-dirs:  agora-drep
  exposed-modules:
    Agora.AuthorityToken
    Agora.Effect.Voting
    Agora.Proxy
    Agora.Utils

  build-depends:
    , generics-sop
    , plutarch
    , plutarch-ledger-api
    , plutus-ledger-api
    , plutus-tx

executable agora-drep
  import:         lang
  main-is:        Main.hs
  build-depends:  agora-drep
  hs-source-dirs: agora-drep-script-export
  other-modules:

-- Factored out to share code between test and bench units
library agora-drep-spec
  import:          lang
  hs-source-dirs:  agora-drep-spec
  exposed-modules:
    Spec.Effect.Voting
    Spec.Effect.Voting.Context
    Spec.Proxy
    Spec.Proxy.Context
    Spec.Utils

  build-depends:
    , agora-drep
    , bytestring
    , cryptonite
    , data-default-class
    , memory
    , mtl
    , plutarch
    , plutarch-ledger-api
    , plutus-context-builder
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-unit
    , QuickCheck
    , quickcheck-instances
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , text

test-suite agora-drep-test
  import:         lang
  hs-source-dirs: agora-drep-test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , agora-drep-spec
    , tasty

benchmark agora-drep-bench
  import:         lang
  hs-source-dirs: agora-drep-bench
  type:           exitcode-stdio-1.0
  main-is:        Bench.hs
  build-depends:
    , agora-drep
    , agora-drep-spec
    , plutarch
    , plutarch-ledger-api
    , plutarch-testlib
    , plutus-core
    , plutus-ledger-api
    , tasty
